--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
     </header>
 
     <figure class="hero"></figure>
-    <div>
+    <section>
         <h2 id="about-me">About Me</h2>
         <p>
-            I've begun learning web development as an opportunity just to learn something new. I had little dreams of websites I wanted to build and share with friends and people of common interest. I never thought of it as a career choice until I decided that it was worth pursuing! I decided to pursue web development as a career choice after 7+ years at my last job. While I was excellent in my previous position I didn't feel like I was growing in any direction. I wasn't learning anything. Web development, I've come to realize, is in constant growth so I'll always have something new to learn and I believe that is what extracted me the most to it. My hope with this portfolio is to not only show the work I've completed but also allow me the opportunity to look back and see how I've grown and what I can learn next.
+            I've begun learning web development as an opportunity to learn something new. I have a dream of websites I want to build and share with friends and people of common interest. I never thought of it as a career choice until I decided that it was worth pursuing! I decided to pursue web development as a career choice after 7+ years at my last job. While I was excellent in my previous position I didn't feel like I was growing in any direction. I wasn't learning anything. Web development, I've come to realize, is in constant growth so I'll always have something new to learn and I believe that is what extracted me the most to it. My hope with this portfolio is to not only show the work I've completed but also allow me the opportunity to look back and see how I've grown and what I can learn next.
         </p>
         <p> 
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, atque totam. Libero accusantium optio natus possimus incidunt facilis sed fugiat, veritatis quibusdam veniam, distinctio, ducimus alias quas sequi molestias dicta.
         </p>
-    </div>
+    </section>
 
-    <div>
+    <section>
         <h2 id="my-websites"> My Websites</h2>
         <img src="https://placehold.co/300x200/png" alt="Placeholder image">
         <img src="https://placehold.co/300x200/png" alt="Placeholder image">
         <img src="https://placehold.co/300x200/png" alt="Placeholder image">
         <img src="https://placehold.co/300x200/png" alt="Placeholder image">
-    </div>
+    </section>
 
     <footer>
         <h2 id="contact">Contact Me</h2>
