Added website link, images, and captions. Also added id for about me and my websites to align and added padding

--- a/index.html
+++ b/index.html
@@ -29,14 +29,19 @@
         <p> 
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, atque totam. Libero accusantium optio natus possimus incidunt facilis sed fugiat, veritatis quibusdam veniam, distinctio, ducimus alias quas sequi molestias dicta.
         </p>
+        <br>
     </section>
 
     <section>
         <h2 id="my-websites"> My Websites</h2>
-        <img src="https://placehold.co/300x200/png" alt="Placeholder image">
-        <img src="https://placehold.co/300x200/png" alt="Placeholder image">
-        <img src="https://placehold.co/300x200/png" alt="Placeholder image">
-        <img src="https://placehold.co/300x200/png" alt="Placeholder image">
+        <figure>
+            <a href="https://annie-mcelroy.github.io/prework-study-guide/"><img id="prework" src="assets/images/screencapture-prework-study-guide.png" alt="Prework Study Guide website"></a>
+            <figcaption>Prework Study Guide</figcaption>
+        </figure>
+        <figure>
+            <a href="https://annie-mcelroy.github.io/horiseon-accessibility-refactor/"><img id="refactor" src="assets/images/screenshot-horiseon.png" alt="Horiseon refracted website"></a>
+            <figcaption>Horiseon Accessibility Refactor</figcaption>
+        </figure>
     </section>
 
     <footer>
