Updated footer and contact section to be space-between and margin changes and added titles and targets to website images

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#my-websites">My Websites</a></li>
                 <li><a href="#contact">Contact Me</a></li>
-                <li>Resume</li>
+                <li>Resume (Coming Soon)</li>
             </ul>
         </nav>
     </header>
@@ -40,11 +40,11 @@
     <section class="my-websites">
         <h2 class="my-websites-header">My Websites</h2>
         <figure>
-            <a href="https://annie-mcelroy.github.io/prework-study-guide/"><img id="prework-img" src="assets/images/screencapture-prework-study-guide.png" alt="Prework Study Guide website"></a>
+            <a href="https://annie-mcelroy.github.io/prework-study-guide/" title="Prework Study Guide" target="_blank"><img id="prework-img" src="assets/images/screencapture-prework-study-guide.png" alt="Prework Study Guide website"></a>
             <figcaption id="prework">Prework Study Guide</figcaption>
         </figure>
         <figure>
-            <a href="https://annie-mcelroy.github.io/horiseon-accessibility-refactor/"><img id="refactor" src="assets/images/screenshot-horiseon.png" alt="Horiseon refracted website"></a>
+            <a href="https://annie-mcelroy.github.io/horiseon-accessibility-refactor/" title="Horiseon Accessibility Refactor" target="_blank"><img id="refactor" src="assets/images/screenshot-horiseon.png" alt="Horiseon refracted website"></a>
             <figcaption>Horiseon Accessibility Refactor</figcaption>
         </figure>
     </section>
