added resized image of prework project, moved headshot image and added ovale border. Added text and border to prework image and made it a button

--- a/index.html
+++ b/index.html
@@ -17,13 +17,9 @@
             </ul>
         </nav>
     </header>
-<!-- 
-        <aside>
-            <h2>About Me</h2>
-            <img src="assets/images/self-picture.jpg" alt="Headshot" class="headshot">
-        </aside> -->
 
     <section class="about-me">
+        <img id="headshot" src="assets/images/self-picture.jpg" alt="Headshot">
         <h2 class="about-me-header">About Me</h2>
         <p>
             I've begun learning web development as an opportunity to learn something new. I have a dream of websites I want to build and share with friends and people of common interest. I never thought of it as a career choice until I decided that it was worth pursuing after 7+ years at my last job where I didn't feel growth in any direction.
@@ -31,21 +27,19 @@
         <p>
             Web development, I've come to realize, is in constant growth so I'll always have something new to learn and I believe that is what extracted me the most to it. My hope with this portfolio is to not only show the work I've completed but also allow me the opportunity to look back and see how I've grown and what I can learn next.
         </p>
-        <img id="headshot" src="assets/images/self-picture.jpg" alt="Headshot">
     </section>
 
-    <!-- <aside>
-        <h2>My Websites</h2>
-    </aside> -->
     <section class="my-websites">
-        <h2 class="my-websites-header">My Websites</h2>
-        <figure>
-            <a href="https://annie-mcelroy.github.io/prework-study-guide/" title="Prework Study Guide" target="_blank"><img id="prework-img" src="assets/images/screencapture-prework-study-guide.png" alt="Prework Study Guide website"></a>
-            <figcaption id="prework">Prework Study Guide</figcaption>
+        <h2 class="my-websites-header">My Projects</h2>
+        <figure class="container">
+            <button><a href="https://annie-mcelroy.github.io/prework-study-guide/" title="Prework Study Guide" target="_blank">
+            <img class="prework-img" src="assets/images/prework-study-guide-resize.png" alt="Prework Study Guide website">
+            <figcaption class="prework">Prework Study Guide</figcaption>
+            </a></button>
         </figure>
-        <figure>
+        <figure class="container">
             <a href="https://annie-mcelroy.github.io/horiseon-accessibility-refactor/" title="Horiseon Accessibility Refactor" target="_blank"><img id="refactor" src="assets/images/screenshot-horiseon.png" alt="Horiseon refracted website"></a>
-            <figcaption>Horiseon Accessibility Refactor</figcaption>
+            <figcaption class="horiseon">Horiseon Accessibility Refactor</figcaption>
         </figure>
     </section>
 
