added placeholder image for css snippet cheatsheet amd centered projects and added flexbox around project images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a href="#about-me">About Me</a></li>
-                <li><a href="#my-websites">My Websites</a></li>
+                <li><a href="#my-websites">My Projects</a></li>
                 <li><a href="#contact">Contact Me</a></li>
                 <li>Resume (Coming Soon)</li>
             </ul>
@@ -38,8 +38,12 @@
             </a></button>
         </figure>
         <figure class="container">
-            <a href="https://annie-mcelroy.github.io/horiseon-accessibility-refactor/" title="Horiseon Accessibility Refactor" target="_blank"><img id="refactor" src="assets/images/screenshot-horiseon.png" alt="Horiseon refracted website"></a>
-            <figcaption class="horiseon">Horiseon Accessibility Refactor</figcaption>
+            <button><a href="https://annie-mcelroy.github.io/horiseon-accessibility-refactor/" title="Horiseon Accessibility Refactor" target="_blank"><img class="refactor-img" src="assets/images/screenshot-horiseon.png" alt="Horiseon refracted website"></a>
+            <figcaption class="horiseon">Horiseon Accessibility Refactor</figcaption></button>
+        </figure>
+        <figure class="container">
+            <button><a href="https://github.com/Annie-McElroy/css-snippet-cheatsheet" title="CSS Snippet Cheatsheet" target="_blank"><img class="css-img" src="https://placehold.co/300x400" alt="CSS Snippet Cheatsheet website"></a>
+            <figcaption class="css">CSS Snippet Cheatsheet</figcaption></button>
         </figure>
     </section>
 
