fixed nav links to properly work

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
 
-    <section class="about-me">
+    <section id="about-me" class="about-me">
         <img id="headshot" src="assets/images/self-picture.jpg" alt="Headshot">
         <h2 class="about-me-header">About Me</h2>
         <p>
@@ -29,7 +29,7 @@
         </p>
     </section>
 
-    <section class="my-websites">
+    <section id="my-websites" class="my-websites">
         <h2 class="my-websites-header">My Projects</h2>
         <figure class="container">
             <button><a href="https://annie-mcelroy.github.io/prework-study-guide/" title="Prework Study Guide" target="_blank">
@@ -48,7 +48,7 @@
     </section>
 
     <footer>
-        <h2 class="contact">Contact Me</h2>
+        <h2 id="contact" class="contact">Contact Me</h2>
         <ul>
             <li><a href="tel:+15125858522">Call Me at 512-585-8522</a></li>
             <li> <a href="mailto:annie.mcelroy8522@gmail.com">Email Me at annie.mcelroy8522@gmail.com</a></li>
