Removed mediia query as flexbox completes resizing and added min-height to about-me section so my projects is now centered on page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
 
-    <section id="about-me" class="about-me">
+    <section class="about-me">
         <img id="headshot" src="assets/images/self-picture.jpg" alt="Headshot">
         <h2 class="about-me-header">About Me</h2>
         <p>
@@ -29,13 +29,15 @@
         </p>
     </section>
 
-    <section id="my-websites" class="my-websites">
+    <section class="my-websites">
         <h2 class="my-websites-header">My Projects</h2>
         <figure class="container">
-            <button><a href="https://annie-mcelroy.github.io/prework-study-guide/" title="Prework Study Guide" target="_blank">
+            <button>
+            <a href="https://annie-mcelroy.github.io/prework-study-guide/" title="Prework Study Guide" target="_blank">
             <img class="prework-img" src="assets/images/prework-study-guide-resize.png" alt="Prework Study Guide website">
             <figcaption class="prework">Prework Study Guide</figcaption>
-            </a></button>
+            </a>
+            </button>
         </figure>
         <figure class="container">
             <button><a href="https://annie-mcelroy.github.io/horiseon-accessibility-refactor/" title="Horiseon Accessibility Refactor" target="_blank"><img class="refactor-img" src="assets/images/screenshot-horiseon.png" alt="Horiseon refracted website"></a>
