Fixed media query to work on prework-img where it changes width to now be smaller and that the my projects section now looks better in all sizes of window

--- a/index.html
+++ b/index.html
@@ -31,22 +31,24 @@
 
     <section class="my-websites">
         <h2 class="my-websites-header">My Projects</h2>
-        <figure class="container">
-            <button>
-            <a href="https://annie-mcelroy.github.io/prework-study-guide/" title="Prework Study Guide" target="_blank">
-            <img class="prework-img" src="assets/images/prework-study-guide-resize.png" alt="Prework Study Guide website">
-            <figcaption class="prework">Prework Study Guide</figcaption>
-            </a>
-            </button>
-        </figure>
-        <figure class="container">
-            <button><a href="https://annie-mcelroy.github.io/horiseon-accessibility-refactor/" title="Horiseon Accessibility Refactor" target="_blank"><img class="refactor-img" src="assets/images/screenshot-horiseon.png" alt="Horiseon refracted website"></a>
-            <figcaption class="horiseon">Horiseon Accessibility Refactor</figcaption></button>
-        </figure>
-        <figure class="container">
-            <button><a href="https://github.com/Annie-McElroy/css-snippet-cheatsheet" title="CSS Snippet Cheatsheet" target="_blank"><img class="css-img" src="https://placehold.co/300x400" alt="CSS Snippet Cheatsheet website"></a>
-            <figcaption class="css">CSS Snippet Cheatsheet</figcaption></button>
-        </figure>
+        <div class="container">
+            <figure class="container-item1">
+                <button>
+                <a href="https://annie-mcelroy.github.io/prework-study-guide/" title="Prework Study Guide" target="_blank">
+                <img class="prework-img" src="assets/images/prework-study-guide-resize.png" alt="Prework Study Guide website">
+                <figcaption class="prework">Prework Study Guide</figcaption>
+                </a>
+                </button>
+            </figure>
+            <figure class="container-item">
+                <button><a href="https://annie-mcelroy.github.io/horiseon-accessibility-refactor/" title="Horiseon Accessibility Refactor" target="_blank"><img class="refactor-img" src="assets/images/screenshot-horiseon.png" alt="Horiseon refracted website"></a>
+                <figcaption class="horiseon">Horiseon Accessibility Refactor</figcaption></button>
+            </figure>
+            <figure class="container-item">
+                <button><a href="https://github.com/Annie-McElroy/css-snippet-cheatsheet" title="CSS Snippet Cheatsheet" target="_blank"><img class="css-img" src="https://placehold.co/300x400" alt="CSS Snippet Cheatsheet website"></a>
+                <figcaption class="css">CSS Snippet Cheatsheet</figcaption></button>
+            </figure>
+        </div>
     </section>
 
     <footer>
