Updated flex change in nav list when screen is resized and replaced css project image with another while adding a paragraph in about me about upcoming projects

--- a/index.html
+++ b/index.html
@@ -19,34 +19,45 @@
     </header>
 
     <section class="about-me">
-        <img id="headshot" src="assets/images/self-picture.jpg" alt="Headshot">
-        <h2 class="about-me-header">About Me</h2>
+        <img id="headshot" src="./assets/images/self-picture.jpg" alt="Headshot">
+        <h2 id="about-me"class="about-me-header">About Me</h2>
         <p>
             I've begun learning web development as an opportunity to learn something new. I have a dream of websites I want to build and share with friends and people of common interest. I never thought of it as a career choice until I decided that it was worth pursuing after 7+ years at my last job where I didn't feel growth in any direction.
         </p>
         <p>
             Web development, I've come to realize, is in constant growth so I'll always have something new to learn and I believe that is what extracted me the most to it. My hope with this portfolio is to not only show the work I've completed but also allow me the opportunity to look back and see how I've grown and what I can learn next.
         </p>
+        <p>
+            As projects come along and are completed they will be added below. <u>Please know that the <b>CSS Snippet Cheatsheet is still in the works and will direct to the GitHub repo.</b></u>
+        </p>
     </section>
 
-    <section class="my-websites">
-        <h2 class="my-websites-header">My Projects</h2>
+    <section>
+        <h2 id="my-websites" class="my-websites-header">My Projects</h2>
         <div class="container">
-            <figure class="container-item1">
+            <figure class="container-item">
                 <button>
-                <a href="https://annie-mcelroy.github.io/prework-study-guide/" title="Prework Study Guide" target="_blank">
-                <img class="prework-img" src="assets/images/prework-study-guide-resize.png" alt="Prework Study Guide website">
-                <figcaption class="prework">Prework Study Guide</figcaption>
-                </a>
+                    <a href="https://annie-mcelroy.github.io/prework-study-guide/" title="Prework Study Guide" target="_blank">
+                        <img class="prework-img" src="./assets/images/prework-study-guide-resize.png" alt="Prework Study Guide website">
+                        <figcaption class="caption">Prework Study Guide</figcaption>
+                    </a>
                 </button>
             </figure>
             <figure class="container-item">
-                <button><a href="https://annie-mcelroy.github.io/horiseon-accessibility-refactor/" title="Horiseon Accessibility Refactor" target="_blank"><img class="refactor-img" src="assets/images/screenshot-horiseon.png" alt="Horiseon refracted website"></a>
-                <figcaption class="horiseon">Horiseon Accessibility Refactor</figcaption></button>
+                <button>
+                    <a href="https://annie-mcelroy.github.io/horiseon-accessibility-refactor/" title="Horiseon Accessibility Refactor" target="_blank">
+                        <img class="refactor-img" src="./assets/images/screenshot-horiseon.png" alt="Horiseon refracted website"></a>
+                        <figcaption class="caption">Horiseon Accessibility Refactor</figcaption>
+                    </a>
+                </button>
             </figure>
             <figure class="container-item">
-                <button><a href="https://github.com/Annie-McElroy/css-snippet-cheatsheet" title="CSS Snippet Cheatsheet" target="_blank"><img class="css-img" src="https://placehold.co/300x400" alt="CSS Snippet Cheatsheet website"></a>
-                <figcaption class="css">CSS Snippet Cheatsheet</figcaption></button>
+                <button>
+                    <a href="https://github.com/Annie-McElroy/css-snippet-cheatsheet" title="CSS Snippet Cheatsheet" target="_blank">
+                        <img class="css-img" src="./assets/images/placeholder-img-300x400.jpeg" alt="CSS Snippet Cheatsheet website">
+                        <figcaption class="caption">CSS Snippet Cheatsheet</figcaption>
+                    </a>
+                </button>
             </figure>
         </div>
     </section>
