Added webpage title and completed README file

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <section class="about-me">
-        <img id="headshot" src="./assets/images/self-picture.jpg" alt="Headshot">
+        <img id="headshot" src="./assets/images/self-picture.jpg" alt="Annie looking out a window">
         <h2 id="about-me"class="about-me-header">About Me</h2>
         <p>
             I've begun learning web development as an opportunity to learn something new. I have a dream of websites I want to build and share with friends and people of common interest. I never thought of it as a career choice until I decided that it was worth pursuing after 7+ years at my last job where I didn't feel growth in any direction.
