Added BookHub to portfolio

--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
                     </a>
                 </button>
             </figure>
+            <figure class="container-item">
+                <button>
+                    <a href="https://cyphernyx.github.io/BookHub/" title="BookHub" target="_blank">
+                        <img class="css-img" src="./assets/images/BookHub-HomePage.png" alt="BookHub website">
+                        <figcaption class="caption">BookHub</figcaption>
+                    </a>
+                </button>
+            </figure>
         </div>
     </section>
 
