Added HPDex project

--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
                     </a>
                 </button>
             </figure>
+            <figure class="container-item">
+                <button>
+                    <a href="https://hpdex-ddd9719a234b.herokuapp.com/" title="HPDex" target="_blank">
+                        <img class="css-img" src="./assets/images/hpdex.png" alt="HPDex website">
+                        <figcaption class="caption">HPDex</figcaption>
+                    </a>
+                </button>
+            </figure>
         </div>
     </section>
 
